<resources>
    <string name="app_name">MovieMeA</string>

    <string name="movies_order_path_param_now_playing" translatable="false">now_playing</string>
    <string name="movies_order_path_param_popular" translatable="false">popular</string>
    <string name="movies_order_path_param_top_rated" translatable="false">top_rated</string>
    <string name="movies_order_path_param_upcoming" translatable="false">upcoming</string>

    <string name="nav_now_playing">Now Playing</string>
    <string name="nav_most_popular">Most Popular</string>
    <string name="nav_top_rated">Top Rated</string>
    <string name="nav_upcoming">Upcoming</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_settings">Settings</string>

    <string name="other">Other</string>

    <string name="error_generic">Oops! Something went wrong</string>
    <string name="error_no_data_found">Oops! Could not get any data.
        Please check your internet connection and try again</string>
    <string name="error_no_movie_id">Oops! Something went wrong with fetching movie.
        Please go back and try again</string>
    <string name="release_date">Release date:</string>

    <string name="pref_movies_order_title">Movies Order By</string>

    <string name="pref_movies_order_key" translatable="false">moviesOrderPref</string>
    <string name="pref_language_param_key" translatable="false">languageParamPref</string>
    <string name="pref_language_param_default" translatable="false">en-US</string>
    <string name="pref_image_size_key" translatable="false">imageSizePref</string>
    <string name="pref_image_size_default" translatable="false">w185</string>
    <string name="pref_sort_by_param_key" translatable="false">sortByParamPref</string>
    <string name="pref_sort_by_param_default" translatable="false">popularity.desc</string>

    <string name="pref_movies_order_label_now_playing">Now Playing</string>
    <string name="pref_movies_order_label_popular">Most Popular</string>
    <string name="pref_movies_order_label_top_rated">Top Rated</string>
    <string name="pref_movies_order_label_upcoming">Upcoming</string>

    <string name="pref_movies_order_entry_now_playing" translatable="false">now_playing</string>
    <string name="pref_movies_order_entry_popular" translatable="false">popular</string>
    <string name="pref_movies_order_entry_top_rated" translatable="false">top_rated</string>
    <string name="pref_movies_order_entry_upcoming" translatable="false">upcoming</string>

    <string name="movies_order_loader_bundle_key" transatable="false">moviesOrderLoaderBundleKey</string>

    <string name="add_to_favorites">Add to Favorites</string>
    <string name="share">Share</string>

    <string name="added_movie_to_favorites">Added %1$s to Favorites</string>
    <string name="deleted_movie_from_favorites">Deleted %1$s from Favorites</string>
    <string name="delete_favorite_dialog_title">Delete %1$s from Favorites</string>

    <string name="remove_from_favorites">Remove from Favorites</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="user_reviews_header">User Reviews</string>
    <string name="reviews_movie_id_loader_bundle_key" translateable="false">movieId</string>

    <string name="videos_header">Trailers and Videos</string>
    <string name="videos_movie_id_loader_bundle_key" translateable="false">movieId</string>
</resources>
